@@ -1,0 +1,59 @@
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<window>
+    <defaultcontrol>201</defaultcontrol>
+    <animation effect="zoom" end="74.074074074,74.074074074" center="960,540" time="0" condition="!IsEmpty(Window(10000).Property(script.cinemavision.scope.2.40:1))">Conditional</animation>
+    <animation effect="zoom" end="75.925925926,75.925925926" center="960,540" time="0" condition="!IsEmpty(Window(10000).Property(script.cinemavision.scope.2.35:1))">Conditional</animation>
+    <coordinates>
+        <system>1</system>
+        <posx>0</posx>
+        <posy>0</posy>
+    </coordinates>
+    <controls>
+        <control type="image">
+            <posx>110</posx>
+            <posy>100</posy>
+            <width>1700</width>
+            <height>880</height>
+            <texture>script.cinemavision-white_square.png</texture>
+            <colordiffuse>FFFFFFFF</colordiffuse>
+            <aspectratio>stretch</aspectratio>
+        </control>
+        <control type="image">
+            <posx>115</posx>
+            <posy>105</posy>
+            <width>1690</width>
+            <height>870</height>
+            <texture>script.cinemavision-white_square.png</texture>
+            <colordiffuse>FF000000</colordiffuse>
+            <aspectratio>stretch</aspectratio>
+        </control>
+        <control type="image">
+            <posx>115</posx>
+            <posy>105</posy>
+            <width>1690</width>
+            <height>70</height>
+            <texture>script.cinemavision-white_square.png</texture>
+            <colordiffuse>FF202020</colordiffuse>
+            <aspectratio>stretch</aspectratio>
+        </control>
+        <control type="label">
+            <left>125</left>
+            <top>105</top>
+            <width>1670</width>
+            <height>70</height>
+            <align>center</align>
+            <aligny>center</aligny>
+            <font>font12</font>
+            <textcolor>FFFFFFFF</textcolor>
+            <label>[B]$INFO[Window.Property(heading)][/B]</label>
+        </control>
+        <control type="textbox" id="100">
+            <left>135</left>
+            <top>195</top>
+            <width>1650</width>
+            <height>860</height>
+            <font>font10</font>
+            <textcolor>FFFFFFFF</textcolor>
+        </control>
+    </controls>
+</window>
